# Quarter4-learning

./: .gitignore  README.md
Topic11-Handoffs/: README.md  main.py  pyproject.toml  requirements.txt
crypto-agent/: .env  .gitignore  README.md  crypto_agent.py  crypto_api.py  crypto_tools.py  main.py  pyproject.toml  requirements.txt  test_api.py
crypto-agent-chatbot/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
crypto-agent-chatbot/.streamlit/: config.toml  secrets.toml
crypto-agent-chatbot/styles/: style.css
crypto-agent-chatbot/utils/: api.py  charts.py  chatbot.py  helpers.py
crypto-agent/.streamlit/: config.toml  secrets.toml
topic02-FastAPI/: pyproject.toml
topic03-Pydantic/: README.md  main.py  pydantic_example_1.py
topic05-Dependency-Injection/: README.md  main.py  pyproject.toml
topic06-Task-Tracker-API/: README.md  main.py  pyproject.toml
topic07-OpenAI-Agents-SDK/: readme.md
topic08-LLMA/: readme.md
topic09-tool-calling/: .gitignore  README.md  agent.py  app.py  main.py  pyproject.toml  requirements.txt
topic09-tool-calling/tools/: image_generator.py  outline.py  sections.py  styler.py
topic1-Generative AI/: readme.md
topic3-Pydantic/: main.py  pydantic_example_2.py  pydantic_example_3.py  pyproject.toml
topic4-API-Parameters/: README.md  main.py  pyproject.toml
