[project]
name = "crypto-agent"
version = "0.1.0"
description = "A comprehensive crypto agent chatbot using CoinLore API and OpenAI function tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "streamlit-chat>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
